apply denim changes

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,9 +1,9 @@
 
-// DuoTone dark 01
+// DuoTone denim 01
 
 // Hues -----------------------------------
-@syntax-uno:    250;
-@syntax-duo:    30;
+@syntax-uno:    223;
+@syntax-duo:    35;
 
 
 // Language colors -----------------------------------
