--- a/styles/languages/haskell.less
+++ b/styles/languages/haskell.less
@@ -1,6 +1,6 @@
-.haskell {
-  &.source {
+.syntax--haskell {
+  &.syntax--source {
     .uno-2();
-    .punctuation-mixin();
+    .syntax--punctuation-mixin();
   }
 }
