--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -1,6 +1,6 @@
-.js {
-  &.source {
+.syntax--js {
+  &.syntax--source {
     .uno-2();
-    .punctuation-mixin();
+    .syntax--punctuation-mixin();
   }
 }
