--- a/styles/languages/slim.less
+++ b/styles/languages/slim.less
@@ -1,16 +1,16 @@
 // SLIM
 
-.slim {
-  &.meta {
+.syntax--slim {
+  &.syntax--meta {
     .uno-4();
   }
-  &.text {
+  &.syntax--text {
     .uno-3();
   }
-  .string .id {
+  .syntax--string .syntax--id {
     .duo-1();
   }
-  .attribute-name {
+  .syntax--attribute-name {
     .uno-2();
   }
 }
