--- a/styles/editor.less
+++ b/styles/editor.less
@@ -1,8 +1,7 @@
 
 // Editor styles (background, gutter, guides)
 
-atom-text-editor,
-:host {
+atom-text-editor{
   color: @syntax-text-color;
   background-color: @syntax-background-color;
 
@@ -23,7 +22,7 @@ atom-text-editor,
     background-color: @syntax-selection-color;
   }
 
-  .bracket-matcher .region {
+  .syntax--bracket-matcher .region {
     border-bottom: 1px solid @syntax-accent;
     margin-top: -1px;
     opacity: .7;
