added missing syntax--type to prevent deprecation warnings

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -53,7 +53,7 @@
 // Duo hue -----------------------------------
 .syntax--string,
 .syntax--constant,
-.syntax--storage.type {
+.syntax--storage.syntax--type {
   .duo-1();
 }
 
